@@ -9,6 +9,7 @@
 - improved logger in `FILESTORAGE()`
 - fixed functionality of `res.nocache()` method in the `res.stream()` method
 - fixed `continuing` with QueryBuilder processing
+- added `DB().language(prefix, skip)` method that sets a default prefix/skip values
 
 ========================
 0.0.63
